hphp/test/quick/typedef_invalid_name.php.expectf

Fatal error: Unknown type or class IDontExist in %s on line 3
